--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -91,7 +91,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/cmdRegistrar"
                 android:layout_weight="1"
-                android:text="@string/registrar" />
+                android:text="@string/registrar"
+                android:onClick="registrar" />
 
             <Button
                 android:layout_width="wrap_content"
