--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -17,7 +17,8 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_centerHorizontal="false">
+        android:layout_centerHorizontal="false"
+        android:id="@+id/tblPersona">
 
         <TableRow
             android:layout_width="match_parent"
@@ -25,12 +26,11 @@
             tools:layout_gravity="center_horizontal">
 
             <TextView
-                android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView2"
-                tools:text="@string/numero"
-                android:textStyle="normal|bold" />
+                android:textStyle="normal|bold"
+                android:text="@string/numero" />
 
             <TextView
                 android:layout_width="wrap_content"
