--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -99,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/cmdBorar"
                 android:layout_weight="1"
-                android:text="@string/borrar" />
+                android:text="@string/borrar"
+                android:onClick="borrar" />
         </LinearLayout>
 
     </LinearLayout>
